@@ -43,7 +43,8 @@ proc ::struct::queue::LoadAccelerator {key} {
 	    variable selfdir
 	    if {
 		[package vsatisfies [package provide Tcl] 8.5] &&
-		![catch {package require TclOO 0.6.1}]
+		(![catch {package require TclOO 0.6.1}] ||
+		 ![catch {package require TclOO 1}])
 	    } {
 		source [file join $selfdir queue_oo.tcl]
 	    } else {
@@ -184,4 +185,4 @@ namespace eval ::struct {
     namespace export queue
 }
 
-package provide struct::queue 1.4.3
+package provide struct::queue 1.4.4
