@@ -1,3 +1,13 @@
+2013-01-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* pkgIndex.tcl: Fixed package require mismatch for use of TclOO
+	* queue.man: in Tcl 8.6+. This is TclOO v1 (major version change).
+	* queue.tcl: Now accepting 0.6.1+ and 1+. Versions bumped to
+	* queue_oo.tcl: 1.4.4 and 1.5.3 respectively.
+	* stack.man:
+	* stack.tcl:
+	* stack_oo.tcl:
+
 2012-12-07  Andreas Kupries  <andreask@activestate.com>
 
 	* list.tcl: [Bug 3593689]. Applied patch by Donal Fellows fixing
@@ -11,7 +21,7 @@
 	* queue.man: Load check accepts anything, code restricts to 0.6.1.
 	* queue.tcl: Now both restrict to 0.6.1+. Versions bumped to
 	* stack.man: 1.4.3 and 1.5.2 respectively.
-	* stack.tcl: 
+	* stack.tcl:
 
 2012-07-09  Andreas Kupries  <andreask@activestate.com>
 
@@ -35,7 +45,7 @@
 	* 
 
 2011-09-17  Michael Schlenker <mic42@users.sourceforge.ner>
-        
+
 	* list.tcl: [Bug 3308051]: Fixed noncommutative equal check
 	* list.test:
 
